--- a/src/assets/locales/en_US.json
+++ b/src/assets/locales/en_US.json
@@ -1,6 +1,7 @@
 {
   "common": {
     "color": "Color",
+    "magnifier": "Magnifier",
     "eyedropper": "Eyedropper",
     "settings": "Settings",
     "lock": "Keep on Top"
