--- a/src/assets/locales/fr_FR.json
+++ b/src/assets/locales/fr_FR.json
@@ -1,6 +1,7 @@
 {
   "common": {
     "color": "Couleur",
+    "magnifier": "Loupe",
     "eyedropper": "Pipette",
     "settings": "Paramètres",
     "lock": "Garder au premier plan"
